@@ -1,6 +1,8 @@
 Revision history for Perl extension JavaScript::QuickJS:
 
 0.11
+- JavaScript Functions converted to Perl now become instances of a new
+  class, JavaScript::QuickJS::Function.
 - Add missing regexp test.
 
 0.10 Thu 12 May 2022
